mgmt/us-prod-siem-v2/helm/loki-base/kustomize/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-master
  namespace: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
    # cert-manager integration
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.org/client-max-body-size: "50m"
spec:
  tls:
    - hosts:
        - us.siem.v2.accuknox.com
      secretName: logs-tls-secret # cert-manager will create this
  rules:
    - host: us.siem.v2.accuknox.com
